# comfy-ex-tagcomplete

./: .gitignore  README.en.md  README.md  __init__.py  category_map.csv  colors.yaml  paths.py  pyproject.toml  tags_dataframe.py  utils.py
py/: endpoints.py  paths.py  tagdata_manager.py  utils.py  wildcards.py
translate/: Ru_translated.csv  ja_danbooru.csv
web/: caret_helper.js  ex_tagcomplete.js  index.js  settings.js  tag_completer.css  tag_completer.js  textarea-caret-position.js  utils.js
web/completer/: caret_helper.js  dropdown_controller.js  dropdown_renderer.js  keyboard_handler.js  search_engine.js  tag_completer.js  tag_completer_settings.js  text_processor.js  virtual_dropdown_controller.js
web/css/: category_pill.css  custom_badge.css  specific_text_style.css  tag_completer.css
