[project]
name = "comfy-ex-tagcomplete"
description = "tag completer with csv file"
version = "2.0.1"
license = {file = "LICENSE"}
dependencies = ["sqlite3"]

[project.urls]
Repository = "https://github.com/jupo-ai/comfy-ex-tagcomplete"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jupo-ai"
DisplayName = "comfy-ex-tagcomplete"
Icon = ""
